dev/nalda-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root, factory) {
  if (typeof define === "function" && define.amd) {
    define([], factory);
  } else if (typeof module === "object" && module.exports) {
    module.exports = factory();
  } else {
    root.NaldaParser = factory();
  }
})(this, function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Lenguaje: peg$parseLenguaje },
        peg$startRuleFunction  = peg$parseLenguaje,

        peg$c0 = function(ast) {
          //return ast;
          return fromNaldaToAlda(ast)
        },
        peg$c1 = function(instrument, voices) {return {instrument, voices}},
        peg$c2 = ":",
        peg$c3 = peg$literalExpectation(":", false),
        peg$c4 = function(instrument) {return instrument},
        peg$c5 = "voice ",
        peg$c6 = peg$literalExpectation("voice ", false),
        peg$c7 = function(voice, contents) {return {voice, contents}},
        peg$c8 = function(contents) {return [{voice:1, contents}]},
        peg$c9 = "octave:",
        peg$c10 = peg$literalExpectation("octave:", false),
        peg$c11 = function(octave) {return {type: "octave", octave}},
        peg$c12 = "+",
        peg$c13 = peg$literalExpectation("+", false),
        peg$c14 = function(note, modifiers) {return {type: "note", note, modifiers: modifiers ? modifiers : {}}},
        peg$c15 = function(longitude, timing, duration, quantification, volume) {return Object.assign({}, longitude, timing, duration, quantification, volume)},
        peg$c16 = "{",
        peg$c17 = peg$literalExpectation("{", false),
        peg$c18 = "}",
        peg$c19 = peg$literalExpectation("}", false),
        peg$c20 = function(notes, modifiers) {return {type: "chord", notes, modifiers: modifiers ? modifiers : {}}},
        peg$c21 = "tempo:",
        peg$c22 = peg$literalExpectation("tempo:", false),
        peg$c23 = "!",
        peg$c24 = peg$literalExpectation("!", false),
        peg$c25 = function(tempo) {return {type: "global tempo", tempo}},
        peg$c26 = function(tempo) {return {type: "local tempo", tempo}},
        peg$c27 = function(scale) {return scale},
        peg$c28 = function(times) { return {type:"scale up", times: times ? times[1] : 1}},
        peg$c29 = function(times) { return {type:"scale down", times: times ? times[1] : 1}},
        peg$c30 = "@",
        peg$c31 = peg$literalExpectation("@", false),
        peg$c32 = function(moment) {return {type: "moment definition", moment}},
        peg$c33 = function(moment) {return {type: "moment usage", moment}},
        peg$c34 = function(longitude) {return {longitude}},
        peg$c35 = function(timing, magnitude) {return {timing: magnitude === "seconds" ? (timing * 1000) : timing}},
        peg$c36 = function(duration) {return {duration}},
        peg$c37 = function(quantification) {return {quantification}},
        peg$c38 = function(volume) {return {volume}},
        peg$c39 = /^[0-9]/,
        peg$c40 = peg$classExpectation([["0", "9"]], false, false),
        peg$c41 = function() {return parseInt(text())},
        peg$c42 = ".",
        peg$c43 = peg$literalExpectation(".", false),
        peg$c44 = function() {return parseFloat(text())},
        peg$c45 = /^[\n\r\t ]/,
        peg$c46 = peg$classExpectation(["\n", "\r", "\t", " "], false, false),
        peg$c47 = /^[A-Za-z]/,
        peg$c48 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
        peg$c49 = function() {return text()},
        peg$c50 = /^[A-Za-z0-9\-]/,
        peg$c51 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "-"], false, false),
        peg$c52 = "L",
        peg$c53 = peg$literalExpectation("L", false),
        peg$c54 = "l",
        peg$c55 = peg$literalExpectation("l", false),
        peg$c56 = "longitude",
        peg$c57 = peg$literalExpectation("longitude", false),
        peg$c58 = "length",
        peg$c59 = peg$literalExpectation("length", false),
        peg$c60 = function() {},
        peg$c61 = "MS",
        peg$c62 = peg$literalExpectation("MS", false),
        peg$c63 = "ms",
        peg$c64 = peg$literalExpectation("ms", false),
        peg$c65 = "milliseconds",
        peg$c66 = peg$literalExpectation("milliseconds", false),
        peg$c67 = "S",
        peg$c68 = peg$literalExpectation("S", false),
        peg$c69 = "s",
        peg$c70 = peg$literalExpectation("s", false),
        peg$c71 = "seconds",
        peg$c72 = peg$literalExpectation("seconds", false),
        peg$c73 = function() {return (text().toLowerCase().indexOf("m") !== -1) ? "milliseconds" : "seconds"},
        peg$c74 = "D",
        peg$c75 = peg$literalExpectation("D", false),
        peg$c76 = "d",
        peg$c77 = peg$literalExpectation("d", false),
        peg$c78 = "duration",
        peg$c79 = peg$literalExpectation("duration", false),
        peg$c80 = "Q",
        peg$c81 = peg$literalExpectation("Q", false),
        peg$c82 = "q",
        peg$c83 = peg$literalExpectation("q", false),
        peg$c84 = "quantification",
        peg$c85 = peg$literalExpectation("quantification", false),
        peg$c86 = "V",
        peg$c87 = peg$literalExpectation("V", false),
        peg$c88 = "v",
        peg$c89 = peg$literalExpectation("v", false),
        peg$c90 = "volume",
        peg$c91 = peg$literalExpectation("volume", false),
        peg$c92 = "scaleup",
        peg$c93 = peg$literalExpectation("scaleup", false),
        peg$c94 = "up",
        peg$c95 = peg$literalExpectation("up", false),
        peg$c96 = "scaledown",
        peg$c97 = peg$literalExpectation("scaledown", false),
        peg$c98 = "down",
        peg$c99 = peg$literalExpectation("down", false),
        peg$c100 = function(modifiers) {return {type: "silence", modifiers: modifiers ? modifiers : {}}},
        peg$c101 = "[[",
        peg$c102 = peg$literalExpectation("[[", false),
        peg$c103 = "]]",
        peg$c104 = peg$literalExpectation("]]", false),
        peg$c105 = function(code) {return {type: "alda injection", code}},
        peg$c106 = peg$anyExpectation(),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseLenguaje() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseSentencia_completa();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseSentencia_completa();
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c0(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSentencia_completa() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseInstrumento();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parse_();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parse_();
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseVoces();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c1(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseInstrumento() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parsePalabra_amplia();
        if (s2 !== peg$FAILED) {
          if (input.charCodeAt(peg$currPos) === 58) {
            s3 = peg$c2;
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$c3); }
          }
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c4(s2);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseVoces() {
      var s0;

      s0 = peg$parseVoces_multiples();
      if (s0 === peg$FAILED) {
        s0 = peg$parseVoz_unica();
      }

      return s0;
    }

    function peg$parseVoces_multiples() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseVoz_multiple();
      if (s1 !== peg$FAILED) {
        while (s1 !== peg$FAILED) {
          s0.push(s1);
          s1 = peg$parseVoz_multiple();
        }
      } else {
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseVoz_multiple() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 6) === peg$c5) {
          s2 = peg$c5;
          peg$currPos += 6;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c6); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNumero();
          if (s3 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 58) {
              s4 = peg$c2;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c3); }
            }
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$parse_();
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$parse_();
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseContenido_musical();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c7(s3, s6);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseVoz_unica() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseContenido_musical();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c8(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseContenido_musical() {
      var s0, s1;

      s0 = [];
      s1 = peg$parseItem_musical();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseItem_musical();
      }

      return s0;
    }

    function peg$parseItem_musical() {
      var s0;

      s0 = peg$parseOctava();
      if (s0 === peg$FAILED) {
        s0 = peg$parseNota();
        if (s0 === peg$FAILED) {
          s0 = peg$parseAcorde();
          if (s0 === peg$FAILED) {
            s0 = peg$parseTempo_global();
            if (s0 === peg$FAILED) {
              s0 = peg$parseTempo_local();
              if (s0 === peg$FAILED) {
                s0 = peg$parseMovimiento_de_escala();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseMomento();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseSilencio();
                    if (s0 === peg$FAILED) {
                      s0 = peg$parseInyeccion_de_codigo_alda();
                    }
                  }
                }
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseOctava() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        if (input.substr(peg$currPos, 7) === peg$c9) {
          s2 = peg$c9;
          peg$currPos += 7;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c10); }
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNumero();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c11(s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseNota() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parse_();
      while (s2 !== peg$FAILED) {
        s1.push(s2);
        s2 = peg$parse_();
      }
      if (s1 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 43) {
          s2 = peg$c12;
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c13); }
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = peg$parseNumero();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseModificadores_de_nota();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c14(s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseModificadores_de_nota() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;
